# agent-bridge

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
agent_bridge/: __init__.py  agents.json  cli.py  correlation.py  findings.py  mailbox.py  mailbox_mcp.py  trace.py  workflow.py
agent_bridge/workflows/: deep-research-lite.workflow.json
scripts/: install.ps1  install.sh
tests/: test_bridge_cli.py  test_mailbox.py  test_mailbox_mcp.py  test_trace_findings.py  test_workflow.py
