[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "0.1.0"
description = "Global local bridge for bounded headless collaboration between coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent = "agent_bridge.cli:main_entry"

[tool.setuptools]
packages = ["agent_bridge"]
include-package-data = true

[tool.setuptools.package-data]
agent_bridge = ["agents.json", "workflows/*.json"]
